--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.12",
     "web3": "^1.0.0-beta.37"
