--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xxRanger/transaction-history-watcher.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/xxRanger/transaction-history-watcher/issues"
+  },
+  "homepage": "https://github.com/xxRanger/transaction-history-watcher#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.11"
   }
 }
